updating based on my preferences

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -7,9 +7,9 @@
     - role: apt
       tags:
         - apt
-    - role: snap
-      tags:
-        - snap
+    # - role: snap
+    #   tags:
+    #     - snap
     - role: zsh
       tags:
         - zsh
@@ -34,15 +34,15 @@
     - role: golang
       tags:
         - golang
-    - role: ruby
-      tags:
-        - ruby
-    - role: erlang
-      tags:
-        - erlang
-    - role: elixir
-      tags:
-        - elixir
+    # - role: ruby
+    #   tags:
+    #     - ruby
+    # - role: erlang
+    #   tags:
+    #     - erlang
+    # - role: elixir
+    #   tags:
+    #     - elixir
     - role: node
       tags:
         - node
